--- a/Presentation/ETicaretAPI.API/appsettings.json
+++ b/Presentation/ETicaretAPI.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MsSql": "Server=(localdb)\\MSSQLLocalDB;Database=ETicaretAPIDb; Trusted_Connection=True;"
+  }
 }
